<resources>
    <string name="app_name">Send Box In Future</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_box">New Box</string>
    <string name="box_title_label">Title:</string>
    <string name="box_title_hint">Enter a title for the box.</string>
    <string name="date_label">Delivery date:</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="cardview_box_transition_name">cardview_box</string>
    <string name="box_activity_label">Box</string>
    <string name="button_set_date">Set date</string>
    <string name="button_add_text">Text</string>
    <string name="button_add_video">Video</string>
    <string name="button_add_picture">Picture</string>
    <string name="button_seal_box">Seal</string>
    <string name="button_put_into_box">Put into box</string>
    <string name="time_label">Time:</string>
    <string name="time_picker_title">Time to receive the box</string>
    <string name="button_set_time">Set time</string>
    <string name="remove">Remove delivered boxes</string>
    <string name="button_seal_warning">Please, enter Title first.</string>
</resources>
