<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    android:transitionName="@string/cardview_box_transition_name"

    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/view_title_and_date_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_title_label"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/box_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="@color/black"
                android:hint="@string/box_title_hint"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_title_and_date_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button_set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/time_label"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button_set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                />


        </LinearLayout>


    </LinearLayout>



</android.support.v7.widget.CardView>

